--- a/Frontend/src/pages/auth/sign-up/SignUp.css
+++ b/Frontend/src/pages/auth/sign-up/SignUp.css
@@ -7,13 +7,16 @@
   gap: 36px;
   margin: 40px auto;
   padding: var(--padding-section);
+  font-family: 'Poppins', sans-serif;
   max-width: 1200px;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.6), rgba(246, 247, 251, 0.6));
   border-radius: var(--radius);
   box-shadow: var(--shadow);
   background-color: var(--color-bg);
 }
-
+.sign-up-container p{
+  font-size: 0.8rem;
+}
 /* ===== Image Section ===== */
 .image-section {
   display: flex;
@@ -142,7 +145,11 @@
   text-align: center;
   margin-top: 8px;
 }
-
+.sign-up-container a{
+  color: var(--color-primary);
+  text-decoration: none;
+  font-weight: 600;
+}
 /* ===== Responsive ===== */
 @media (max-width: 1000px) {
   .sign-up-container {
