feat(fullstack): implementacion de add and delete de categoria

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --color-bg: #ffffff;
   --color-text: #333333;
+  --color-text-button:#ffffff;
   --color-border: #cccccc;
   --color-primary: #000000;
   --color-primary-hover: #525252;
