--- a/Frontend/src/pages/admin/product/components/modal-categories/ModalSubandCategory.css
+++ b/Frontend/src/pages/admin/product/components/modal-categories/ModalSubandCategory.css
@@ -6,6 +6,7 @@
 }
 
 .input__category{
+    padding-top:20px ;
     display: flex;
     gap: 20px;
 
@@ -76,4 +77,7 @@
 .btn__edit:hover,
 .btn__delete:hover {
   transform: scale(1.1);
+}
+.combo__box-categories{
+    padding-bottom: 20px;
 }
