--- a/Frontend/src/components/ProductoCarrito/ProductoCarrito.css
+++ b/Frontend/src/components/ProductoCarrito/ProductoCarrito.css
@@ -77,6 +77,7 @@
   line-height: 1.4;
   position: relative;
   top: -50px; /* súbelo 50px, ajusta según necesites */
+  margin: 0 20%; /* 🔹 agrega separación a los lados */
 }
 .desplegable {
   position: relative;
@@ -106,7 +107,7 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
   padding: 12px;
   z-index: 9999; /* 🔥 Esto lo pone por encima de todo */
-  width: 15%;
+  width: 20%;
 }
 .contenedor-precio {
   border: 1px solid #32e53b;
